# gecko-misc

./: .gitignore  README.md
memory-eviction-and-prefetch/larger_than_main_memory_expirement/: CMakeLists.txt  config.hpp  dbgen.sh  generate_tables_range.sh  main.cpp  workshop_presentation.ppt
memory-eviction-and-prefetch/larger_than_main_memory_expirement/experiment1 and 2/: allplots10-09-2017.7z
memory-eviction-and-prefetch/larger_than_main_memory_expirement/expirement_results/: draw.R  mmysql_log_with_swaping_results.csv
memory-eviction-and-prefetch/larger_than_main_memory_expirement/input_stream/: read_tables.hpp
memory-eviction-and-prefetch/larger_than_main_memory_expirement/r_monetdb_benchmark/: .Rhistory  config.R  main.r  sql_queries.R
memory-eviction-and-prefetch/larger_than_main_memory_expirement/r_mysql_benchmark/: .RData  config.R  config.R.save  main.r  sql_queries.R
memory-eviction-and-prefetch/larger_than_main_memory_expirement/r_mysql_memory_benchmark/: config.R  config.R.save.1  main.r  sql_queries.R
memory-eviction-and-prefetch/larger_than_main_memory_expirement/schema/: customer.hpp  line_item.hpp  nation.hpp  orders.hpp  part.hpp  part_supplier.hpp  region.hpp  schema_include.hpp  supplier.hpp
memory-eviction-and-prefetch/larger_than_main_memory_expirement/tpch_queries/: query_6.hpp
memory-eviction-and-prefetch/larger_than_main_memory_expirement/utilities/: date_utilities.hpp  file_utilities.hpp  memory_measurer.hpp  profiling.hpp
memory-eviction-and-prefetch/larger_than_main_memory_expirement/voltdb_codes/: deployment.xml  (+2 more)
(+364 files in other folders)
